# pcs3x58-embedded-systems

head-mounted-sensors/: CMakeLists.txt  RTIMULib.ini
head-mounted-sensors/etc/: RTIMULib.ini
head-mounted-sensors/etc/systemd/system/: pimpolho.service
head-mounted-sensors/src/: 9dof.cc  9dof.hh  hand_tracking.cc  hand_tracking.hh  main.cc  realsense.cc  realsense.h  serial.c  serial.h
receiver/: .gitignore  Makefile  input.c  input.h  leds.c  leds.h  main.c  project.ld  serial.c  startup_gcc.c  usb.c  usb.h
